--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ plugins {
   id 'application'
 }
 
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+
 dependencies {
   xtextLanguages "ca.ubc.stat.blang:ca.ubc.stat.blang:3.25.3"
   compile group: 'ca.ubc.stat', name: 'conifer', version: '2.0.4'
